--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -4,6 +4,7 @@
 code {
     font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
     color: $regular-text-color;
+    background-color: $code-block-background-color;
     font-size: 13px;
     margin: 0 4px;
     padding: 4px 6px;
@@ -15,13 +16,11 @@ pre {
     background: $code-block-background-color;
     border-radius: 2px;
     border: 2px solid $code-block-border-color;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .3);
     overflow: auto;
     overflow-y: hidden;
 
     code {
         color: $unhighlighted-code-color;
-        text-shadow: 0px 1px 0px #000;
         margin: 0;
         padding: 0;
     }
