--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,1 @@
-<h2>Content</h2>
-<ul>
-    <li><a href="content/credits">Credits</a></li>
-</ul>
+<h2>Content</h2><ul><li><p>Python</p><ul><li><a href="content/python/dramatiq-dependency-injection">Testable Dramatiq and Dependency Injection</a></li></ul></li><li><a href="content/credits">Credits</a></li></ul>
