--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <hr />
     <ul>
+        <li>Got feedback? <a href="{{ site.github.repository_url }}/issues">Open an Issue</a></li>
         <li>Maintainer: <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></li>
-        <li><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
     </ul>
 </footer>
