--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     <hr />
     <ul>
         <li>Got feedback? <a href="{{ site.github.repository_url }}/issues">Open an Issue</a></li>
-        <li>Maintainer: <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></li>
+        <li>Maintainer: <a href="{{ site.github.owner_url }}">DOC</a></li>
     </ul>
 </footer>
