fix home page link because i'm stupi

--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -5,7 +5,7 @@
 
 <body>
     <div class="home-page-link">
-        <a href="{{site.url}}">Home page</a>
+        <a href="{{site.url}}/content">Home page</a>
     </div>
 
     <header>
