--- a/_sass/colors.scss
+++ b/_sass/colors.scss
@@ -16,3 +16,6 @@ $horizontal-rule-line-color: #008888;
 
 $link-color: #16bbbb;
 $link-hover-color: #16ffff;
+$monospace-link-color: #16aaaa;
+$monospace-link-hover-color: $link-color;
+$monospace-link-background-color: #1a2020;
