--- a/_sass/content-wrapper.scss
+++ b/_sass/content-wrapper.scss
@@ -5,3 +5,9 @@
     padding: 0 20px;
     padding-top: 10px;
 }
+
+@media (orientation: portrait) {
+    .content-wrapper {
+        max-width: 100%;
+    }
+}
