--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -5,8 +5,14 @@ footer {
     ul {
         list-style: none;
         padding: 0;
-        margin: 0;
+        margin: 5px;
         display: flex;
         justify-content: space-between;
+    }
+}
+
+@media (orientation: portrait) {
+    footer {
+        width: 100%;
     }
 }
