--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -7,6 +7,7 @@
     <header>
         <h1>{{ page.title }}</h1>
         <p>{{ page.description }}</p>
+        {% include creation-date.html %}
         <div class="home-page-link">
             <a href="{{site.url}}/content">>> Go to Home page</a>
         </div>
