--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -6,6 +6,11 @@
     margin-bottom: 10px;
 }
 
+.creation-date-items {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 header {
     width: 60%;
     margin: 0 auto;
