--- a/_layouts/standard.html
+++ b/_layouts/standard.html
@@ -9,12 +9,11 @@
         <p>{{ page.description }}</p>
         {% include creation-date.html %}
         <div class="home-page-link">
-            <a href="{{site.url}}/content">>> Go to Home page</a>
+            <a href="{{site.url}}">>> Go to Home page</a>
         </div>
         <hr />
     </header>
 
-    
     <div class="content-wrapper">
         {{ content }}
     </div>
