fix max image size

--- a/_sass/content-wrapper.scss
+++ b/_sass/content-wrapper.scss
@@ -6,6 +6,11 @@
     padding-top: 10px;
 }
 
+.content-wrapper img {
+    max-width: 100%;
+    height: auto;
+}
+
 @media (orientation: portrait) {
     .content-wrapper {
         max-width: 100%;
